--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-       <title>Hafirah</title>
+       <title> Nur Hafirah</title>
     </head>
 <body>
-<h1>Nur Hafirah binti Kamaludin</h1>
-<h2>2018408478</h2>
-<h3>IM110 5C</h3>
+<h1 style='color:blue'>My Personal Biography</h1>
+<img src="images/images3.jpg" height="300px" width="300px">
+<button><a href="http://www.google.com">Go to Google</a></button>
+<ul>
+	<li>I am cooperative person when work in group</li>
+	<li>I not a talkative person and shy when I speak in public</li>
+	<li>I will do every work with my best trying</li>
+</ul>
 </body>
 </html>
